"Copy to selected" on cycles properties (e.g. "shadow terminator offset") asserts / is broken #79633

Closed
opened 2020-08-08 01:17:44 +02:00 by SABRI Salim · 12 comments

System Information
Operating system: Linux-5.4.0-7634-generic-x86_64-with-debian-bullseye-sid 64 Bits
Graphics card: GeForce GTX 1080 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 440.95.01

Blender Version
Broken: version: 2.90.0 Beta, branch: master, commit date: 2020-08-05 21:36, hash: c5b6b3d82f
Caused by 337e2c9029

Short description of error
can not copy shadow terminator offset value from active object to other selected objects

**System Information** Operating system: Linux-5.4.0-7634-generic-x86_64-with-debian-bullseye-sid 64 Bits Graphics card: GeForce GTX 1080 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 440.95.01 **Blender Version** Broken: version: 2.90.0 Beta, branch: master, commit date: 2020-08-05 21:36, hash: `c5b6b3d82f` Caused by 337e2c9029 **Short description of error** can not copy shadow terminator offset value from active object to other selected objects
Author

Added subscriber: @Dalkoom

Added subscriber: @Dalkoom

Added subscriber: @iss

Added subscriber: @iss

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

In debug build this triggered assert in rna_property_override_operation_apply Alt + property change seems to work correctly.

'shadow_terminator_offset' gives unmatching or NULL RNA copy callbacks, should not happen (1 vs. 0).

In debug build this triggered assert in `rna_property_override_operation_apply` Alt + property change seems to work correctly. `'shadow_terminator_offset' gives unmatching or NULL RNA copy callbacks, should not happen (1 vs. 0).`
Member

Added subscribers: @mont29, @lichtwerk

Added subscribers: @mont29, @lichtwerk
Member

Looks like this is caused by 337e2c9029

True for any cycles property it seems (e.g. could also be motion_steps)

Since this is also in 2.90, will set to High prio (@mont29 feel free to change back if you think this is OK for 2.90)

Looks like this is caused by 337e2c9029 True for any cycles property it seems (e.g. could also be `motion_steps`) Since this is also in 2.90, will set to High prio (@mont29 feel free to change back if you think this is OK for 2.90)
Philipp Oeser changed title from Copy to selected "shadow terminator offset" to "Copy to selected" on cycles properties (e.g. "shadow terminator offset") asserts / is broken 2020-08-17 11:51:19 +02:00

Changed status from 'Confirmed' to: 'Needs User Info'

Changed status from 'Confirmed' to: 'Needs User Info'

I cannot confirm that here with current 2.90 branch, debug build... Please be specific about the steps you are using? I tried ctrl-c/ctrl-v and 'Copy to selected' from right-click menu on the widget, both are working for me.

I cannot confirm that here with current 2.90 branch, debug build... Please be specific about the steps you are using? I tried ctrl-c/ctrl-v and 'Copy to selected' from right-click menu on the widget, both are working for me.
Bastien Montagne self-assigned this 2020-08-17 16:19:56 +02:00

Changed status from 'Needs User Info' to: 'Confirmed'

Changed status from 'Needs User Info' to: 'Confirmed'

Ah actually, manage to reproduce, only happen if one of the object has never had the property set, while the other did...

Ah actually, manage to reproduce, only happen if one of the object has never had the property set, while the other did...

This issue was referenced by c7a7a38b65

This issue was referenced by c7a7a38b653a3587302a000355159784decee4a6

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#79633
No description provided.