Fix T79633: ovrride apply code broken with RNA-defined runtime IDProps in some cases.

When copying between a set RNA runtime property and an unset one, code
would not behave properly.

We have to also consider NULL 'override apply' callback pointer as a
valid 'use default override apply function' case.